--- a/src/style/success.css
+++ b/src/style/success.css
@@ -9,3 +9,13 @@
 table tr td, table tr th {
     width: 100px;
 }
+
+.table__success tr th {
+    color: #fff !important;
+}
+
+.text-data {
+    color: var(--bs-green) !important;
+    font-weight: 600;
+    font-size: 1.2rem;
+}
