--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,7 @@
 
 body {
   font-family: "Montserrat", sans-serif;
+  background: var(--bs-gray-700);
 }
 
 h1,
@@ -34,6 +35,7 @@ h6,
 p {
   padding: 0;
   margin: 0;
+  color: #fff;
 }
 
 p {
@@ -70,4 +72,8 @@ section {
   section {
     padding: 40px 0;
   }
+}
+
+.all__item {
+  row-gap: 30px;
 }
