--- a/src/style/home.css
+++ b/src/style/home.css
@@ -1,18 +1,15 @@
 
 
-.hero__section {
-    background: var(--hero-bg);
-}
 
 .hero__content h2 {
-    color: var(--primary-color);
+    color: #fff;
     font-size: 2.5rem;
     font-weight: 600;
     margin: 20px 0;
 }
 
 .hero__content p {
-    color: var(--primary-color);
+    color: #fff;
     line-height: 28px;
 }
 .hero__content p:nth-child(1) {
@@ -57,6 +54,10 @@ padding: 45px 0;
 
 .store__btn a:hover {
     color: var(--primary-color);
+}
+.section__title {
+    color: #fff;
+    margin-bottom: 4rem;
 }
 
 @media only screen and (max-width:992px) {
