--- a/src/style/product-add.css
+++ b/src/style/product-add.css
@@ -4,3 +4,8 @@
 #btn:hover, .btn:hover {
     border: 1px solid var(--primary-color);
 }
+
+#file__add-product {
+    border: #fff;
+    color: #fff;
+}
