--- a/src/style/product-card.css
+++ b/src/style/product-card.css
@@ -1,7 +1,17 @@
 .product__item {
     cursor: pointer;
 }
+.product__img img{
+    width: 18rem;
+    height: 20rem;
+}
 
+.product__info{
+    font-size: 1.2rem;
+    color: var(--primary-color);
+    font-weight: 600;
+    margin-top: 15px;
+}
 .product__info h3 a{
     font-size: 1.2rem;
     color: var(--primary-color);
@@ -18,17 +28,28 @@
 }
 
 .product__card-bottom .price {
-    color: var(--primary-color);
+    color: var(--bs-danger);
     font-size: 1.3rem;
     font-weight: 500;
 }
 
+.product__card-bottom span:nth-child(1) {
+       margin-left: 8rem;
+
+}
 .product__card-bottom span i {
     font-size: 1.2rem;
     padding: 5px;
-    background: var(--primary-color);
+    background: var(--bs-green);
     color: #fff;
     border-radius: 50px;
+}
+
+.product__item {
+    box-shadow: 3px 3px 10px -5px rgba(0, 0, 0, .8),
+    -2px -2px 5px -3px rgba(0, 0, 0, .5);
+    border-radius: 5px;
+    background: #fff;
 }
 
 @media only screen and (max-width:992px) {
